--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "ts",
     "library"
   ],
-  "homepage": "https://github.com/koodikulma-fi/DataSignals",
+  "homepage": "https://github.com/koodikulma-fi/data-signals",
   "author": "Mikael Saurén",
   "license": "MIT",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/koodikulma-fi/DataSignals.git"
+    "url": "git+https://github.com/koodikulma-fi/data-signals.git"
   },
-  "module": "./dist/DataSignals.mjs",
-  "main": "./dist/DataSignals.js",
-  "types": "./dist/DataSignals.d.ts",
+  "module": "./dist/data-signals.mjs",
+  "main": "./dist/data-signals.js",
+  "types": "./dist/data-signals.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/DataSignals.mjs",
-      "require": "./dist/DataSignals.js"
+      "import": "./dist/data-signals.mjs",
+      "require": "./dist/data-signals.js"
     },
     "./package.json": "./package.json"
   },
