--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^5.6.2"
+    "typescript": "4.9"
   }
 }
