--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "tsc": "tsc -p tsconfig.json",
     "build": "tsc && rollup -c rollup.config.js"
   },
+  "dependencies": {
+    "mixin-types": "^1.0.0"
+  },
   "devDependencies": {
     "rollup": "^2.77.2",
     "rollup-plugin-delete": "^2.0.0",
