Tiny comment and README refines.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "data",
     "signals",
     "context",
-    "contextAPI",
+    "Context",
+    "ContextAPI",
+    "DataBoy",
+    "DataMan",
+    "SignalBoy",
+    "SignalMan",
+    "RefreshCycles",
+    "refresh",
+    "cycles",
+    "flow",
     "manager",
     "tools",
     "web",
