--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-signals",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Simple JS/TS classes and mixins to help manage complex state and action flow in sync.",
   "keywords": [
     "DataSignals",
@@ -41,9 +41,10 @@
   "exports": {
     ".": {
       "import": "./dist/data-signals.module.js",
-      "require": "./dist/data-signals.js"
+      "require": "./dist/data-signals.js",
+      "types": "./dist/data-signals.d.ts"
     },
-    "./package.json": "./package.json"
+    "./package.json": "./dist/package.json"
   },
   "files": [
     "dist",
@@ -54,7 +55,7 @@
     "build": "tsc && rollup -c rollup.config.js"
   },
   "dependencies": {
-    "mixin-types": "~1.1.0"
+    "mixin-types": "~1.1.1"
   },
   "devDependencies": {
     "rollup": "^2.77.2",
